--- a/src/components/nftmart/NFTMart.css
+++ b/src/components/nftmart/NFTMart.css
@@ -1,7 +1,7 @@
 .nft__mart {
   background: #25272e;
   color: #fff;
-  height: 100vh;
+  height: 100%;
   padding: 1em;
 }
 
@@ -80,4 +80,45 @@
   font-size: 14px;
   line-height: 21px;
   color: #38f2af;
+}
+
+.nftmart__body {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  border: 2px solid #373943;
+  background: #373943;
+  border-radius: 10px;
+}
+
+.nfts {
+  width: 260px;
+  height: 331px;
+  border-radius: 8px;
+  border: 1px solid #25272e;
+  margin: 0.5em 0;
+}
+
+.nfts img {
+  width: 257px;
+}
+
+.nfts h2 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+}
+
+.nfts p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  color: #828282;
+}
+
+.nft_det h2,
+p {
+  padding: 0.2em;
 }
